--- a/app/src/main/res/layout/image_log.xml
+++ b/app/src/main/res/layout/image_log.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=""
-    android:orientation="vertical">
-
-    <include layout="@layout/nav_drawer"/>
-
+    tools:context=".MainActivity">
+<include layout="@layout/nav_drawer"/>
     <ListView
         android:id="@+id/listViewL4"
         android:layout_width="match_parent"
@@ -20,6 +17,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:backgroundTint="#00FFFF"
+
         android:textColor="#808080"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/switchL4"
@@ -48,4 +46,4 @@
         app:layout_constraintHorizontal_chainStyle="spread"/>
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
