--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -7,7 +7,7 @@
             android:title="Home" />
         <item
             android:id="@+id/nav_nasa_image"
-            android:icon="@drawable/ic_dadjoke"
+            android:icon="@drawable/ic_nasa_bw"
             android:title="NASA Images" />
     </group>
 
