--- a/app/src/main/res/layout/image_log.xml
+++ b/app/src/main/res/layout/image_log.xml
@@ -16,9 +16,9 @@
         android:id="@+id/editTextL4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:backgroundTint="#00FFFF"
+        android:backgroundTint="@color/purple_3"
 
-        android:textColor="#808080"
+        android:textColor="your_text_color_primary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/switchL4"
         app:layout_constraintStart_toStartOf="parent"
