--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="material_dynamic_neutral30">#FF454749</color>
-    <color name="material_dynamic_neutral40">#FF5C5F61</color>
+    <!-- Dark theme colors -->
+    <color name="your_primary_color">#FFBB86FC</color>
+    <color name="your_primary_variant_color">#FF3700B3</color>
+    <color name="your_on_primary_color">#FFFFFFFF</color>
+    <color name="your_secondary_color">#FF03DAC5</color>
+    <color name="your_secondary_variant_color">#FF018786</color>
+    <color name="your_on_secondary_color">#FF000000</color>
+    <color name="your_window_background_color">#FF121212</color>
+    <color name="your_text_color_primary">#FFFFFFFF</color>
+    <color name="your_text_color_secondary">#FFD5D5D5</color>
+    <color name="your_background_color">#FF1E1E1E</color>
+    <color name="your_foreground_color">#FFBDBDBD</color>
+    <!-- Soft dark blues -->
+    <color name="blue_1">#6C9BBC</color>
+    <color name="blue_2">#4F8FAA</color>
+    <color name="blue_3">#317F96</color>
+    <color name="blue_4">#216E83</color>
+    <color name="blue_5">#105F72</color>
+
+    <!-- Soft purples -->
+    <color name="purple_1">#512DA8</color>
+    <color name="purple_2">#5E35B1</color>
+    <color name="purple_3">#673AB7</color>
+    <color name="purple_4">#7E57C2</color>
+    <color name="purple_5">#9575CD</color>
 </resources>
