--- a/app/src/main/res/layout/image_log.xml
+++ b/app/src/main/res/layout/image_log.xml
@@ -18,11 +18,12 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/purple_3"
 
-        android:textColor="your_text_color_primary"
+        android:textColor="@color/your_text_color_secondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/switchL4"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintHorizontal_chainStyle="spread"/>
+        app:layout_constraintHorizontal_chainStyle="spread"
+        tools:ignore="ExtraText" />
 
     <Switch
         android:id="@+id/switchL4"
