--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.NASAImages" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/purple_1</item>
+        <item name="colorPrimaryVariant">@color/purple_2</item>
+        <item name="colorOnPrimary">@color/your_text_color_primary</item>
+        <item name="colorSecondary">@color/purple_4</item>
+        <item name="colorSecondaryVariant">@color/purple_3</item>
+        <item name="colorOnSecondary">@color/your_text_color_secondary</item>
+        <item name="android:windowBackground">@color/your_window_background_color</item>
+        <item name="android:textColorPrimary">@color/your_text_color_primary</item>
+        <item name="android:textColorSecondary">@color/your_text_color_secondary</item>
+        <item name="android:colorBackground">@color/your_background_color</item>
+        <item name="android:colorForeground">#8F8F8F</item>
     </style>
 </resources>
