--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="your_on_secondary_color">#FF000000</color>
     <color name="your_window_background_color">#FF121212</color>
     <color name="your_text_color_primary">#FFFFFFFF</color>
+    <color name="white">#FAFAFA</color>
     <color name="your_text_color_secondary">#FFD5D5D5</color>
     <color name="your_background_color">#FF1E1E1E</color>
     <color name="your_foreground_color">#FFBDBDBD</color>
