--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,4 +18,13 @@
 
 
     </style>
+
+    <style name="Theme.NASAImages.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.NASAImages.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.NASAImages.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
